fix ffmpeg adaptor bug